Tested the database queries for the SQL needed for the Dialog and Tag system. The next part that will need to be worked on is the actual dialog editor.

--- a/Phase2/Godot_Toolset/CodeSandboxes/ToolsetProjectTemplate/.godot/editor/editor_layout.cfg
+++ b/Phase2/Godot_Toolset/CodeSandboxes/ToolsetProjectTemplate/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ open_scenes=["res://screens/MainMenu.tscn", "res://GenresSubstitution/TestDB.tsc
 
 [ScriptEditor]
 
-open_scripts=["res://GenresSubstitution/genre_sub.gd", "res://Dialog/dialog_system.gd"]
+open_scripts=["res://Dialog/dialog_system.gd", "res://GenresSubstitution/genre_sub.gd"]
 open_help=[]
 script_split_offset=150
 list_split_offset=0
