Started work on the new Grammar checker system.

--- a/Phase2/Godot_Toolset/CodeSandboxes/ToolsetProjectTemplate/.godot/editor/editor_layout.cfg
+++ b/Phase2/Godot_Toolset/CodeSandboxes/ToolsetProjectTemplate/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://screens/MainMenu.tscn", "res://GenresSubstitution/TestDB.tscn", "res://Dialog/TestDialog.tscn"]
+open_scenes=["res://screens/MainMenu.tscn", "res://GenresSubstitution/TestDB.tscn", "res://Dialog/TestDialog.tscn", "res://Grammar/GrammarTest.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Dialog/dialog_system.gd", "res://GenresSubstitution/genre_sub.gd"]
+open_scripts=["res://Dialog/dialog_system.gd", "res://GenresSubstitution/genre_sub.gd", "res://Grammar/GrammarTest.gd"]
 open_help=[]
 script_split_offset=150
 list_split_offset=0
