--- a/Phase2/Godot_Toolset/CodeSandboxes/ToolsetProjectTemplate/.godot/editor/script_editor_cache.cfg
+++ b/Phase2/Godot_Toolset/CodeSandboxes/ToolsetProjectTemplate/.godot/editor/script_editor_cache.cfg
@@ -19,9 +19,23 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 45,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 114,
 "row": 101,
-"scroll_position": 79.0,
+"scroll_position": 66.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Grammar/GrammarTest.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 42,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
