Made some changes to the natural language algorith, to imporve the correction of grammar. It still needs work with H words and the exceptions list related to AN.

--- a/Phase2/Godot_Toolset/CodeSandboxes/ToolsetProjectTemplate/.godot/editor/script_editor_cache.cfg
+++ b/Phase2/Godot_Toolset/CodeSandboxes/ToolsetProjectTemplate/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 42,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 49,
-"scroll_position": 35.0,
+"row": 135,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -19,9 +19,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 51,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 117,
+"h_scroll_position": 0,
 "row": 77,
-"scroll_position": 49.0,
+"scroll_position": 75.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,39 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 46,
-"scroll_position": 21.0,
+"row": 78,
+"scroll_position": 72.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
+}
+
+[res://Grammar/ExceptionsForAn.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 7,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
+}
+
+[res://Grammar/ExceptionsForA.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
 }
