--- a/Phase2/Godot_Toolset/CodeSandboxes/Experiment_Main_Menu_2023_0611/.godot/editor/editor_layout.cfg
+++ b/Phase2/Godot_Toolset/CodeSandboxes/Experiment_Main_Menu_2023_0611/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://toolset_test/drag_and_drop_demo_final.tscn", "res://toolset_test_tabbed_merged/draggable_assets.tscn", "res://toolset_test_tabbed_merged/tabbed_merged_test_interface.tscn", "res://index_screen/index.tscn", "res://index_screen/index.tscn"]
+open_scenes=["res://toolset_test/drag_and_drop_demo_final.tscn", "res://toolset_test_tabbed_merged/draggable_assets.tscn", "res://toolset_test_tabbed_merged/tabbed_merged_test_interface.tscn", "res://index_screen/index.tscn", "res://top_toolbar/TopToolbar.tscn"]
 
 [ScriptEditor]
 
