--- a/Phase2/Godot_Toolset/CodeSandboxes/Experiment_Main_Menu_2023_0611/.godot/editor/editor_layout.cfg
+++ b/Phase2/Godot_Toolset/CodeSandboxes/Experiment_Main_Menu_2023_0611/.godot/editor/editor_layout.cfg
@@ -20,7 +20,17 @@ open_scenes=["res://top_toolbar/TopToolbar.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://GenreSettings.gd", "res://MenuManager.gd"]
+open_scripts=["res://top_toolbar/DialogMenu.gd", "res://top_toolbar/GenreDialogManager.gd", "res://GenreSettings.gd", "res://MenuManager.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
