--- a/Phase2/Godot_Toolset/CodeSandboxes/Experiment_Main_Menu_2023_0611/.godot/editor/editor_layout.cfg
+++ b/Phase2/Godot_Toolset/CodeSandboxes/Experiment_Main_Menu_2023_0611/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://top_toolbar/TopToolbar.tscn", "res://genre_dialog_container.tscn"]
+open_scenes=["res://top_toolbar/TopToolbar.tscn", "res://genre_dialog_container.tscn", "res://new_genre.tscn"]
 
 [ScriptEditor]
 
