Finished Save system for grammar. changed naming system for character editor to make it easier to navigate in editor and make writing the save system for it a million times easier

--- a/Phase2/Godot_Toolset/CodeSandboxes/Experiment_Main_Menu_2023_0611/.godot/editor/editor_layout.cfg
+++ b/Phase2/Godot_Toolset/CodeSandboxes/Experiment_Main_Menu_2023_0611/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://top_toolbar/TopToolbar.tscn", "res://genre_dialog_container.tscn", "res://new_genre.tscn"]
+open_scenes=["res://top_toolbar/TopToolbar.tscn", "res://genre_dialog_container.tscn", "res://new_genre.tscn", "res://term_container.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://top_toolbar/DialogMenu.gd", "res://top_toolbar/GenreDialogManager.gd", "res://GenreSettings.gd", "res://genre_dialog_container.gd", "res://MenuManager.gd"]
+open_scripts=["res://top_toolbar/CharacterMenu.gd", "res://top_toolbar/DialogMenu.gd", "res://top_toolbar/GenreDialogManager.gd", "res://GenreSettings.gd", "res://genre_dialog_container.gd", "res://MenuManager.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
