--- a/Phase2/Godot_Toolset/CodeSandboxes/Experiment_Main_Menu_2023_0611/.godot/editor/script_editor_cache.cfg
+++ b/Phase2/Godot_Toolset/CodeSandboxes/Experiment_Main_Menu_2023_0611/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 10.0,
+"row": 35,
+"scroll_position": 11.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 76,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
-"scroll_position": 0.0,
-"selection": false,
+"row": 16,
+"scroll_position": 3.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 15,
+"selection_to_column": 76,
+"selection_to_line": 16,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,6 +67,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 16,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://top_toolbar/CharacterMenu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 40,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
