--- a/Phase2/Godot_GameCode/_MVP_Game_Demo/Doug/bcirpg_game_mvp_2024_0519A/_userFiles/PlayerPreferences.cfg
+++ b/Phase2/Godot_GameCode/_MVP_Game_Demo/Doug/bcirpg_game_mvp_2024_0519A/_userFiles/PlayerPreferences.cfg
@@ -2,7 +2,8 @@
 
 player_name="Tester the Wary!"
 risk_threshold=2.0
-genre_selection="MYSTERY"
+genre_selection="FANTASY"
+game_selection="DUNGEONS&DRAGONS"
 
 [visual_controls]
 
