Character Conversion Work CONT'D 5
Adds Falstaff csv test character for OpenD6 to the _userFiles. Adds functionality to the import to match the add character. Fixes bug in import, and fixes that bug in percentile character for both add and import as well. Finally, fixes character print in-game so percentile displays as well as variable front-end games.

--- a/Phase2/MVP/Game/bcirpg_game_mvp_2024_0831A/_userFiles/PlayerPreferences.cfg
+++ b/Phase2/MVP/Game/bcirpg_game_mvp_2024_0831A/_userFiles/PlayerPreferences.cfg
@@ -3,7 +3,7 @@
 player_name="Tester the Wary!"
 risk_threshold=2.0
 genre_selection="FANTASY"
-game_selection="BCIRPG_PERCENTILE"
+game_selection="OPEND6_FANTASY"
 
 [visual_controls]
 
