--- a/Phase2/MVP/Game/bcirpg_game_mvp_2024_0831A/_userFiles/PlayerPreferences.cfg
+++ b/Phase2/MVP/Game/bcirpg_game_mvp_2024_0831A/_userFiles/PlayerPreferences.cfg
@@ -3,7 +3,7 @@
 player_name="Tester the Wary!"
 risk_threshold=2.0
 genre_selection="FANTASY"
-game_selection="BCIRPG_PERCENTILE"
+game_selection="OPEND6_FANTASY"
 
 [visual_controls]
 
@@ -22,4 +22,4 @@ keyboard_layout=2
 
 [theme]
 
-theme_selection=0
+theme_selection="res://assets/Themes/ui_controlNode_dark_theme.tres"
